--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
           <img src="portfolio.png" alt="Portfolio" class="project-img" />
           <div class="project-info">
             <span class="project-title">🌐 Portfolio Website</span><br />
-            <a href="https://github.com/mehalgoyal/portfolio" target="_blank">View on GitHub</a>
+            <a href="portfolio.html" target="_blank">View on GitHub</a>
           </div>
         </li>
 
