--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
           <img src="landingPg.png" alt="Landing Page" class="project-img" />
           <div class="project-info">
             <span class="project-title">🖥️ Landing Page</span><br />
-            <a href="https://github.com/mehalgoyal/landing-page" target="_blank">View on GitHub</a>
+            <a href="landing page.html" target="_blank">View on GitHub</a>
           </div>
         </li>
 
