--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
           <img src="calculator.png" alt="Calculator" class="project-img" />
           <div class="project-info">
             <span class="project-title">🧮 Calculator App</span><br />
-            <a href="https://github.com/mehalgoyal/calculator" target="_blank">View on GitHub</a>
+            <a href="Calculator.html" target="_blank">View on GitHub</a>
           </div>
         </li>
       </ul>
